[package]
name = "noosphere-gateway"
version = "0.12.1"
edition = "2021"
description = "A geist on the network that enables user spheres to discover each other"
keywords = ["http", "geist", "noosphere", "p2p", "ucan"]
categories = [
  "network-programming",
  "asynchronous",
]
rust-version = "1.75.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/noosphere-gateway"
repository = "https://github.com/subconsciousnetwork/noosphere"
homepage = "https://github.com/subconsciousnetwork/noosphere"
readme = "README.md"

[features]
default = []
test-kubo = []
observability = ["axum-tracing-opentelemetry"]

[dependencies]
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
reqwest = { workspace = true }
noosphere-common = { workspace = true, features = ["helpers"] }
noosphere-core = { workspace = true, features = ["helpers"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-extra = { workspace = true, features = ["typed-header"] }
axum-tracing-opentelemetry = { workspace = true, optional = true }
iroh-car = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
async-trait = { workspace = true }
async-stream = { workspace = true }

url = { workspace = true, features = ["serde"] }
mime_guess = "^2"

noosphere-ipfs = { workspace = true }
noosphere-core = { workspace = true }
noosphere-ns = { workspace = true }
noosphere-storage = { workspace = true }
noosphere-common = { workspace = true }
noosphere-ucan = { workspace = true }
cid = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
libipld-core = { workspace = true }
libipld-cbor = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }

