[package]
name = "noosphere-into"
version = "0.11.6"
edition = "2021"
description = "Transformations of Noosphere content into various target formats"
keywords = ["html", "ipld", "noosphere", "subtext", "transcode"]
categories = [
  "asynchronous",
  "web-programming",
  "file-system"
]
rust-version = "1.75.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/noosphere-into"
repository = "https://github.com/subconsciousnetwork/noosphere"
homepage = "https://github.com/subconsciousnetwork/noosphere"
readme = "README.md"

[dependencies]
noosphere-core = { workspace = true }
noosphere-storage = { workspace = true }
noosphere-ucan = { workspace = true }
subtext = { workspace = true, features = ["stream"] }
async-trait = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

horrorshow = "~0.8"
cid = { workspace = true }
libipld-cbor = { workspace = true }

bytes = "^1"
tokio-util = "~0.7"
tokio-stream = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "test-util"] }

async-stream = { workspace = true }
futures = { workspace = true }
async-utf8-decoder = { version = "~0.3" }

[dev-dependencies]
noosphere-core = { workspace = true, features = ["helpers"] }
wasm-bindgen-test = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# Mostly these dependencies are used in the examples
axum = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["fs", "trace"] }
