[package]
name = "noosphere-ipfs"
version = "0.5.3"
edition = "2021"
description = "An interface for an IPFS client."
keywords = [
  "ipfs",
  "noosphere",
  "p2p",
]
categories = [
  "network-programming",
  "asynchronous",
]
rust-version = "1.60.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/noosphere-ipfs"
repository = "https://github.com/subconsciousnetwork/noosphere"
homepage = "https://github.com/subconsciousnetwork/noosphere"
readme = "README.md"

[features]
default = ["storage"]
storage = ["ucan"]
test_kubo = []

[dependencies]
anyhow = "^1"
async-compat = { version = "~0.2" }
async-trait = "~0.1"
tokio-stream = "~0.1"
async-stream = "~0.3"
libipld-core = { workspace = true }
libipld-cbor = { workspace = true }
cid = { workspace = true }
reqwest = { version = "~0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "^1", features = ["io-util"] }
tracing = { workspace = true }
url = { version = "^2", features = [ "serde" ] }
noosphere-storage = { version = "0.7.0", path = "../noosphere-storage" }
ucan = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = { version = "^0.14.26", features = ["full"] }
hyper-multipart-rfc7578 = "~0.8"
ipfs-api-prelude = "~0.5"

[dev-dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
rand = "~0.8"
libipld-cbor = { workspace = true }
noosphere-storage = { version = "0.7.0", path = "../noosphere-storage" }
noosphere-car = { version = "0.2.0", path = "../noosphere-car" }
noosphere-core = { version = "0.12.3", path = "../noosphere-core" }
