[package]
name = "noosphere-ipfs"
version = "0.8.6"
edition = "2021"
description = "An interface for an IPFS client."
keywords = [
  "ipfs",
  "noosphere",
  "p2p",
]
categories = [
  "network-programming",
  "asynchronous",
]
rust-version = "1.75.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/noosphere-ipfs"
repository = "https://github.com/subconsciousnetwork/noosphere"
homepage = "https://github.com/subconsciousnetwork/noosphere"
readme = "README.md"

[features]
default = ["storage"]
storage = ["noosphere-ucan"]
test-kubo = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
libipld-core = { workspace = true }
libipld-cbor = { workspace = true }
cid = { workspace = true }
reqwest = { version = "~0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["compat"] }
tracing = { workspace = true }
url = { workspace = true, features = [ "serde" ] }
noosphere-storage = { workspace = true }
noosphere-common = { workspace = true }
noosphere-ucan = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = { version = "^0.14.27", features = ["full"] }
hyper-multipart-rfc7578 = "~0.8"
ipfs-api-prelude = "0.6"

[dev-dependencies]
rand = { workspace = true }
iroh-car = { workspace = true }
libipld-cbor = { workspace = true }
libipld-json = { workspace = true }
noosphere-core = { workspace = true }
