[package]
name = "noosphere-ns"
version = "0.9.1"
edition = "2021"
description = "A P2P name system for Noosphere"
keywords = [
  "name-system",
  "noosphere",
  "p2p",
  "dht",
  "distributed",
]
categories = [
  "network-programming",
  "asynchronous",
]
rust-version = "1.60.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/noosphere-ns"
repository = "https://github.com/subconsciousnetwork/noosphere"
homepage = "https://github.com/subconsciousnetwork/noosphere"
readme = "README.md"

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "^1"
tracing = { workspace = true }
thiserror = { workspace = true }
lazy_static = "^1"
cid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = "^0.3.26"
async-trait = "~0.1"
ucan = { workspace = true }
ucan-key-support = { workspace = true }
tokio = { version = "1.28", features = ["io-util", "io-std", "sync", "macros", "rt", "rt-multi-thread"] }
noosphere-storage = { version = "0.7.1", path = "../noosphere-storage" }
noosphere-core = { version = "0.13.1", path = "../noosphere-core" }
libp2p = { version = "0.51.3", default-features = false, features = [ "ed25519", "identify", "dns", "kad", "macros", "noise", "serde", "tcp", "tokio", "yamux" ] }
void = { workspace = true }

# noosphere_ns::bin
noosphere = { version = "0.12.1", path = "../noosphere", optional = true }
noosphere-ipfs = { version = "0.6.1", path = "../noosphere-ipfs", optional = true }
clap = { version = "^4.3", features = ["derive"], optional = true }
home = { version = "~0.5", optional = true }
toml = { version = "~0.5", optional = true }

# noosphere_ns::server
axum = { version = "~0.5", features = ["json", "headers", "macros"], optional = true }
reqwest = { version = "~0.11", default-features = false, features = ["json", "rustls-tls"], optional = true }
tower-http = { version = "~0.3", features = ["trace"], optional = true }
url = { version = "^2", features = [ "serde" ], optional = true }

[dev-dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
rand = { version = "0.8.5" }
libipld-cbor = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["orb-ns", "api-server"]
api-server = ["axum", "reqwest", "url", "tower-http"]
orb-ns = ["clap", "noosphere", "home", "toml", "noosphere-ipfs"]

[[bin]]
name = "orb-ns"
required-features = ["orb-ns"]
