[package]
name = "noosphere-ns"
version = "0.11.4"
edition = "2021"
description = "A P2P name system for Noosphere"
keywords = [
  "name-system",
  "noosphere",
  "p2p",
  "dht",
  "distributed",
]
categories = [
  "network-programming",
  "asynchronous",
]
rust-version = "1.60.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/noosphere-ns"
repository = "https://github.com/subconsciousnetwork/noosphere"
homepage = "https://github.com/subconsciousnetwork/noosphere"
readme = "README.md"

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
lazy_static = "^1"
cid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = "^0.3.26"
async-trait = "~0.1"
ucan = { workspace = true }
ucan-key-support = { workspace = true }
tokio = { workspace = true, features = ["io-util", "io-std", "sync", "macros", "rt", "rt-multi-thread"] }
noosphere-storage = { version = "0.9.3", path = "../noosphere-storage" }
noosphere-core = { version = "0.17.3", path = "../noosphere-core" }
noosphere-common = { version = "0.1.2", path = "../noosphere-common" }
libp2p = { version = "0.51.3", default-features = false, features = [ "ed25519", "identify", "dns", "kad", "macros", "noise", "serde", "tcp", "tokio", "yamux" ] }
void = { workspace = true }

# noosphere_ns::bin
noosphere = { version = "0.15.4", path = "../noosphere", optional = true }
noosphere-ipfs = { version = "0.8.4", path = "../noosphere-ipfs", optional = true }
clap = { version = "^4.4", features = ["derive"], optional = true }
home = { version = "~0.5", optional = true }
toml = { version = "~0.8", optional = true }

# noosphere_ns::server
axum = { workspace = true, features = ["json", "headers", "macros"], optional = true }
reqwest = { version = "~0.11", default-features = false, features = ["json", "rustls-tls"], optional = true }
tower-http = { workspace = true, features = ["trace"], optional = true }
url = { version = "^2", features = [ "serde" ], optional = true }

[dev-dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
rand = { workspace = true }
libipld-cbor = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["orb-ns", "api-server"]
api-server = ["axum", "reqwest", "url", "tower-http"]
orb-ns = ["clap", "noosphere", "home", "toml", "noosphere-ipfs"]

[[bin]]
name = "orb-ns"
required-features = ["orb-ns"]
