[package]
name = "noosphere-storage"
version = "0.3.0"
edition = "2021"
description = "Pluggable backing storage for the Rust Noosphere implementation"
keywords = ["storage", "noosphere", "sled", "ipld", "indexeddb"]
categories = [
  "asynchronous",
  "file-system",
  "web-programming",
  "web-assembly"
]
rust-version = "1.60.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/noosphere-storage"
repository = "https://github.com/subconsciousnetwork/noosphere"
homepage = "https://github.com/subconsciousnetwork/noosphere"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
async-std = "^1"
async-trait = "~0.1"
async-stream = "~0.3"
tokio-stream = "~0.1"
cid = "~0.9"
tracing = "~0.1"
ucan = { version = "0.1.0" }
libipld-core = "~0.15"
libipld-cbor = "~0.15"
serde = "^1"
base64 = "=0.13.0"

[dev-dependencies]
witty-phrase-generator = "~0.2"
wasm-bindgen-test = "~0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sled = "~0.34"
tokio = { version = "^1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "^1", features = [] }
wasm-bindgen = "~0.2"
rexie = { version = "~0.4" }
js-sys = "~0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "~0.3"
features = [
  "Window",
  "DedicatedWorkerGlobalScope",
]