[package]
name = "noosphere-storage"
version = "0.8.1"
edition = "2021"
description = "Pluggable backing storage for the Rust Noosphere implementation"
keywords = ["storage", "noosphere", "sled", "ipld", "indexeddb"]
categories = [
  "asynchronous",
  "file-system",
  "web-programming",
  "web-assembly"
]
rust-version = "1.60.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/noosphere-storage"
repository = "https://github.com/subconsciousnetwork/noosphere"
homepage = "https://github.com/subconsciousnetwork/noosphere"
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
async-trait = "~0.1"
async-stream = { workspace = true }
tokio-stream = { workspace = true }
cid = { workspace = true }
noosphere-common = { version = "0.1.0", path = "../noosphere-common" }
tracing = "~0.1"
ucan = { workspace = true }
libipld-core = { workspace = true }
libipld-cbor = { workspace = true }
serde = { workspace = true }
base64 = "=0.21.2"
url = { version = "^2" }

[dev-dependencies]
witty-phrase-generator = "~0.2"
wasm-bindgen-test = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sled = "~0.34"
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["sync", "macros"] }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
rexie = { version = "~0.4" }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "~0.3"
features = [
  "Window",
  "DedicatedWorkerGlobalScope",
]
